# dart-rust-ffi

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
lib/: rust_ffi.dart
src/: lib.rs
