[package]
name = "rust_ffi"
version = "0.1.0"
authors = ["ucokcode <ucokcode00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "play_once"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.37"
cpal = "0.13.1"
